# Dron_sim

./: .gitignore  AI_context_file.md  Dockerfile  README.md  README_beginner.md  package.xml  plik_kontekstowy_dla_AI.md
.devcontainer/: devcontainer.json
.qgc-config/: QGroundControl.ini
.qgc-config/ParamCache/: 1_1.v2
custom_map_QGC/: coordinates copy.yaml  coordinates.yaml
hitnet_venv/: requirements.txt
install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
install/gz-gui9/share/gz-gui9/: package.bash  package.zsh
install/ros2_control_cmake/share/ros2_control_cmake/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sim_bringup/share/sim_bringup/: package.sh
install/sim_debug_tools/share/sim_debug_tools/: package.bash  package.dsv  package.sh
install/uav_bringup/share/uav_bringup/: package.bash  package.ps1  package.sh
install/uav_description/share/uav_description/: package.sh  package.xml
install/uav_mav/share/uav_mav/: package.bash  package.dsv  package.ps1  package.sh  package.xml
install/uav_sensors/lib/uav_sensors/: geotag_recorder
install/uav_sensors/share/uav_sensors/: package.bash  package.dsv  package.ps1  package.sh  package.xml
install/uav_sim/share/uav_sim/: package.ps1  package.sh  package.zsh
install/uav_vision/share/uav_vision/: package.ps1  package.sh  package.xml
scripts/: post_start.sh
sim_bringup/: setup.py
sim_bringup/install/: local_setup.sh  setup.zsh
sim_bringup/launch/: sim.launch.py
sim_bringup/models/asphalt_plane/meshes/: surface.dae
sim_bringup/models/asphalt_plane_2/: model.sdf
sim_bringup/models/ball_red/meshes/: ball_red.dae
sim_bringup/models/ball_yellow/meshes/: ball_yellow.dae
sim_bringup/models/barrel/: barrel.stl
sim_bringup/models/mine/meshes/: mine.dae
sim_bringup/models/x500_oak/: model.sdf
sim_bringup/worlds/: main_2.sdf  new.sdf  outside.world  warehouse.world  world.sdf  world1.sdf  world2.sdf  world3.sdf  world4.sdf
src/: uav_camera_det.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
src/sim_bringup/install/: setup.bash  setup.sh
src/sim_bringup/install/sim_bringup/share/sim_bringup/: package.ps1  package.xml
src/sim_bringup/install/sim_bringup/share/sim_bringup/launch/: sim.launch.py
src/sim_bringup/install/sim_bringup/share/sim_bringup/models/ball_black/: model.sdf
src/sim_bringup/install/sim_bringup/share/sim_bringup/models/ball_blue/: model.config  model.sdf
src/sim_bringup/install/sim_bringup/share/sim_bringup/models/ball_yellow/: model.sdf
src/sim_bringup/install/sim_bringup/share/sim_bringup/models/barrel/: barrel.blend  model.config  plane1.blend
src/sim_bringup/install/sim_bringup/share/sim_bringup/models/x500_oak/: model.sdf
src/sim_bringup/launch/: sim.launch.py
src/sim_bringup/models/ball_red/: model.config  model.sdf
src/sim_bringup/models/ball_yellow/: model.config
src/sim_bringup/models/barrel/: barrel.blend1
src/sim_bringup/models/x500_oak/: model.sdf
src/sim_debug_tools/: setup.cfg  setup.py
src/uav_bringup/: setup.py
src/uav_bringup/launch/: uav.launch.py
src/uav_geotag_recorder/: package.xml
src/uav_geotag_recorder/launch/: geotag_recorder.launch.py
src/uav_geotag_recorder/uav_geotag_recorder/: geotag_recorder.py
src/uav_mav/: setup.cfg  setup.py
src/uav_sensors/: setup.cfg  setup.py
src/uav_sensors/uav_sensors/: geotag_recorder.py  geotag_recorder_older.py
src/uav_sensors_gz/: CMakeLists.txt  package.xml
src/uav_sensors_gz/include/uav_sensors_gz/: gimbal_keep_nadir.hpp
src/uav_sensors_gz/src/: gimbal_keep_nadir.cpp
src/uav_sim/: setup.py
src/uav_sim/models/x500_oak/: model.sdf
src/uav_sim/worlds/: main_2.sdf  sim_world_1.sdf
src/uav_vision/: CMakeLists.txt  depth_stop_node.py  disparity.py  imageDepthEstimation.py  setup.py  uav_camera_det.py
src/uav_vision/launch/: uav_vision_terminals.launch.py
src/uav_vision/uav_vision/: uav_camera_det.py
workspace/: Dockerfile  readme.md
workspace/.devcontainer/: devcontainer.json
workspace/.qgc-config/: QGroundControl.ini  QGroundControl.ini.template
workspace/.qgc-config/ParamCache/: 1_1.v2
workspace/scripts/: post_start.sh
workspace/src/uav_bringup/: package.xml  setup.py
workspace/src/uav_bringup/config/: px4-rc.params
workspace/src/uav_bringup/launch/: uav.launch.py
workspace/src/uav_geotag_recorder/: package.xml  setup.cfg  setup.py
workspace/src/uav_sim/: package.xml
workspace/src/uav_sim/worlds/: island.sdf  island2.sdf  (+1 more)
workspace/src/uav_vision/: package.xml  setup.py
workspace/src/uav_vision/launch/: uav_vision_all.launch.py
workspace/src/uav_vision/uav_vision/: depth_processing.py  depth_stop_node.py  disparity.py  measurement_map.py  motion_state.py  px4_reaction.py  stop_controller_node.py  uav_camera_det.py
(+79 files in other folders)
