<?xml version="1.0"?>
<package format="3">
  <name>uav_vision</name>
  <version>0.0.0</version>
  <description>UAV vision and obstacle avoidance nodes</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Jeśli używasz standardowych msg -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Jeśli używasz cv_bridge / OpenCV -->
  <!--
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv</exec_depend>
  -->

  <!-- Testy (opcjonalnie) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
