<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package with launch files to run simulation</description>
  <maintainer email="kp306682@student.polsl.pl">karlikp</maintainer>
  <license>MIT</license>

  <export>
    <build_type>ament_python</build_type>
  </export>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
</package>
